POM dependencies clean-uo and udpate. GSON everywhere.

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -183,6 +183,11 @@
 					<artifactId>spring-boot-starter-web</artifactId>
 				</exclusion>
 				<exclusion>
+					<!-- Until kurento-java spring-boot dependency is updated to 2.2.4.RELEASE -->
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-websocket</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
@@ -280,9 +285,20 @@
 			<version>${version.commonslang}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${version.gson}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.openvidu</groupId>
 			<artifactId>openvidu-java-client</artifactId>
 			<version>${version.openvidu.java.client}</version>
+		</dependency>
+		<dependency>
+			<!-- Until kurento-java spring-boot dependency is updated to 2.2.4.RELEASE -->
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>5.2.3.RELEASE</version>
 		</dependency>
 
 		<!-- Test dependencies -->
