--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -17,7 +17,7 @@
         "jquery": "3.4.1",
         "openvidu-browser": "2.11.0",
         "rxjs": "6.5.3",
-        "zone.js": "0.10.2"
+        "zone.js": "~0.9.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "0.803.9",
