--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,42 +1,41 @@
 {
     "dependencies": {
-        "@angular/animations": "8.2.10",
+        "@angular/animations": "8.2.14",
         "@angular/cdk": "8.2.3",
-        "@angular/common": "8.2.10",
-        "@angular/compiler": "8.2.10",
-        "@angular/core": "8.2.10",
+        "@angular/common": "8.2.14",
+        "@angular/compiler": "8.2.14",
+        "@angular/core": "8.2.14",
         "@angular/flex-layout": "8.0.0-beta.27",
-        "@angular/forms": "8.2.10",
-        "@angular/http": "7.2.15",
+        "@angular/forms": "8.2.14",
         "@angular/material": "8.2.3",
-        "@angular/platform-browser": "8.2.10",
-        "@angular/platform-browser-dynamic": "8.2.10",
-        "@angular/router": "8.2.10",
-        "core-js": "3.3.2",
+        "@angular/platform-browser": "8.2.14",
+        "@angular/platform-browser-dynamic": "8.2.14",
+        "@angular/router": "8.2.14",
+        "core-js": "3.6.4",
         "hammerjs": "2.0.8",
         "jquery": "3.4.1",
         "openvidu-browser": "2.11.0",
-        "rxjs": "6.5.3",
-        "zone.js": "~0.9.1"
+        "rxjs": "6.5.4",
+        "zone.js": "0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.803.9",
-        "@angular/cli": "8.3.9",
-        "@angular/compiler-cli": "8.2.10",
-        "@angular/language-service": "8.2.10",
-        "@types/jasmine": "3.4.4",
-        "@types/node": "12.7.12",
-        "codelyzer": "5.1.2",
+        "@angular-devkit/build-angular": "0.803.24",
+        "@angular/cli": "8.3.24",
+        "@angular/compiler-cli": "8.2.14",
+        "@angular/language-service": "8.2.14",
+        "@types/jasmine": "3.5.2",
+        "@types/node": "13.5.3",
+        "codelyzer": "5.2.1",
         "jasmine-core": "3.5.0",
         "jasmine-spec-reporter": "4.2.1",
-        "karma": "4.3.0",
+        "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
-        "karma-coverage-istanbul-reporter": "2.1.0",
-        "karma-jasmine": "2.0.1",
-        "karma-jasmine-html-reporter": "1.4.2",
-        "protractor": "5.4.2",
-        "ts-node": "8.4.1",
-        "tslint": "5.20.0",
+        "karma-coverage-istanbul-reporter": "2.1.1",
+        "karma-jasmine": "3.1.0",
+        "karma-jasmine-html-reporter": "1.5.1",
+        "protractor": "5.4.3",
+        "ts-node": "8.6.2",
+        "tslint": "6.0.0",
         "typescript": "3.5.3"
     },
     "license": "Apache-2.0",
