--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,54 +1,55 @@
 {
-    "dependencies": {
-        "@angular/animations": "8.2.14",
-        "@angular/cdk": "8.2.3",
-        "@angular/common": "8.2.14",
-        "@angular/compiler": "8.2.14",
-        "@angular/core": "8.2.14",
-        "@angular/flex-layout": "8.0.0-beta.27",
-        "@angular/forms": "8.2.14",
-        "@angular/material": "8.2.3",
-        "@angular/platform-browser": "8.2.14",
-        "@angular/platform-browser-dynamic": "8.2.14",
-        "@angular/router": "8.2.14",
-        "core-js": "3.6.4",
-        "hammerjs": "2.0.8",
-        "jquery": "3.4.1",
-        "openvidu-browser": "2.11.0",
-        "rxjs": "6.5.4",
-        "zone.js": "0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "0.803.24",
-        "@angular/cli": "8.3.24",
-        "@angular/compiler-cli": "8.2.14",
-        "@angular/language-service": "8.2.14",
-        "@types/jasmine": "3.5.2",
-        "@types/node": "13.5.3",
-        "codelyzer": "5.2.1",
-        "jasmine-core": "3.5.0",
-        "jasmine-spec-reporter": "4.2.1",
-        "karma": "4.4.1",
-        "karma-chrome-launcher": "3.1.0",
-        "karma-coverage-istanbul-reporter": "2.1.1",
-        "karma-jasmine": "3.1.0",
-        "karma-jasmine-html-reporter": "1.5.1",
-        "protractor": "5.4.3",
-        "ts-node": "8.6.2",
-        "tslint": "6.0.0",
-        "typescript": "3.5.3"
-    },
-    "license": "Apache-2.0",
-    "name": "frontend",
-    "private": true,
-    "scripts": {
-        "build": "ng build --output-path ../main/resources/static",
-        "build-prod": "ng build --prod --output-path ../main/resources/static",
-        "e2e": "ng e2e",
-        "lint": "ng lint",
-        "ng": "ng",
-        "start": "ng serve",
-        "test": "ng test"
-    },
-    "version": "0.0.0"
+  "dependencies": {
+    "@angular/animations": "9.0.0",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "9.0.0",
+    "@angular/compiler": "9.0.0",
+    "@angular/core": "9.0.0",
+    "@angular/flex-layout": "8.0.0-beta.27",
+    "@angular/forms": "9.0.0",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "9.0.0",
+    "@angular/platform-browser-dynamic": "9.0.0",
+    "@angular/router": "9.0.0",
+    "core-js": "3.6.4",
+    "hammerjs": "2.0.8",
+    "jquery": "3.4.1",
+    "openvidu-browser": "2.11.0",
+    "rxjs": "6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "9.0.1",
+    "@angular/compiler-cli": "9.0.0",
+    "@angular/language-service": "9.0.0",
+    "@types/jasmine": "3.5.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "2.1.1",
+    "karma-jasmine": "3.1.0",
+    "karma-jasmine-html-reporter": "1.5.1",
+    "protractor": "5.4.3",
+    "ts-node": "8.6.2",
+    "tslint": "6.0.0",
+    "typescript": "3.7.5"
+  },
+  "license": "Apache-2.0",
+  "name": "frontend",
+  "private": true,
+  "scripts": {
+    "build": "ng build --output-path ../main/resources/static",
+    "build-prod": "ng build --prod --output-path ../main/resources/static",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test"
+  },
+  "version": "0.0.0"
 }
