--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
     "@angular/animations": "9.0.0",
-    "@angular/cdk": "8.2.3",
+    "@angular/cdk": "9.0.0",
     "@angular/common": "9.0.0",
     "@angular/compiler": "9.0.0",
     "@angular/core": "9.0.0",
     "@angular/flex-layout": "9.0.0-beta.29",
     "@angular/forms": "9.0.0",
-    "@angular/material": "8.2.3",
+    "@angular/material": "9.0.0",
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/router": "9.0.0",
@@ -16,24 +16,24 @@
     "jquery": "3.4.1",
     "openvidu-browser": "2.11.0",
     "rxjs": "6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "tslib": "1.10.0",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-angular": "0.900.1",
     "@angular/cli": "9.0.1",
     "@angular/compiler-cli": "9.0.0",
     "@angular/language-service": "9.0.0",
-    "@types/jasmine": "3.5.2",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/jasmine": "3.5.3",
+    "@types/node": "13.7.0",
+    "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.0",
-    "karma-jasmine-html-reporter": "1.5.1",
+    "karma-jasmine-html-reporter": "1.5.2",
     "protractor": "5.4.3",
     "ts-node": "8.6.2",
     "tslint": "6.0.0",
