--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -36,7 +36,7 @@ openvidu.streams.video.min-recv-bandwidth=300
 openvidu.streams.video.max-send-bandwidth=1000
 openvidu.streams.video.min-send-bandwidth=300
 
-coturn.redis.ip=127.0.0.1
+coturn.redis.ip=
 coturn.redis.dbname=0
 coturn.redis.password=turn
 coturn.redis.connect-timeout=30
