Update to version v2.12.0

--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,55 +1,55 @@
 {
-  "dependencies": {
-    "@angular/animations": "9.0.0",
-    "@angular/cdk": "9.0.0",
-    "@angular/common": "9.0.0",
-    "@angular/compiler": "9.0.0",
-    "@angular/core": "9.0.0",
-    "@angular/flex-layout": "9.0.0-beta.29",
-    "@angular/forms": "9.0.0",
-    "@angular/material": "9.0.0",
-    "@angular/platform-browser": "9.0.0",
-    "@angular/platform-browser-dynamic": "9.0.0",
-    "@angular/router": "9.0.0",
-    "core-js": "3.6.4",
-    "jquery": "3.4.1",
-    "openvidu-browser": "2.11.0",
-    "rxjs": "6.5.4",
-    "tslib": "1.10.0",
-    "zone.js": "0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.1",
-    "@angular/cli": "9.0.1",
-    "@angular/compiler-cli": "9.0.0",
-    "@angular/language-service": "9.0.0",
-    "@types/jasmine": "3.5.3",
-    "@types/node": "13.7.0",
-    "codelyzer": "5.2.1",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.0",
-    "karma-jasmine-html-reporter": "1.5.2",
-    "protractor": "5.4.3",
-    "ts-node": "8.6.2",
-    "tslint": "6.0.0",
-    "typescript": "3.7.5"
-  },
-  "license": "Apache-2.0",
-  "name": "frontend",
-  "private": true,
-  "scripts": {
-    "build": "ng build --output-path ../main/resources/static",
-    "build-prod": "ng build --prod --output-path ../main/resources/static",
-    "e2e": "ng e2e",
-    "lint": "ng lint",
-    "ng": "ng",
-    "start": "ng serve",
-    "test": "ng test",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
-  },
-  "version": "0.0.0"
+    "dependencies": {
+        "@angular/animations": "9.0.0",
+        "@angular/cdk": "9.0.0",
+        "@angular/common": "9.0.0",
+        "@angular/compiler": "9.0.0",
+        "@angular/core": "9.0.0",
+        "@angular/flex-layout": "9.0.0-beta.29",
+        "@angular/forms": "9.0.0",
+        "@angular/material": "9.0.0",
+        "@angular/platform-browser": "9.0.0",
+        "@angular/platform-browser-dynamic": "9.0.0",
+        "@angular/router": "9.0.0",
+        "core-js": "3.6.4",
+        "jquery": "3.4.1",
+        "openvidu-browser": "2.12.0",
+        "rxjs": "6.5.4",
+        "tslib": "1.10.0",
+        "zone.js": "0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "0.900.1",
+        "@angular/cli": "9.0.1",
+        "@angular/compiler-cli": "9.0.0",
+        "@angular/language-service": "9.0.0",
+        "@types/jasmine": "3.5.3",
+        "@types/node": "13.7.0",
+        "codelyzer": "5.2.1",
+        "jasmine-core": "3.5.0",
+        "jasmine-spec-reporter": "4.2.1",
+        "karma": "4.4.1",
+        "karma-chrome-launcher": "3.1.0",
+        "karma-coverage-istanbul-reporter": "2.1.1",
+        "karma-jasmine": "3.1.0",
+        "karma-jasmine-html-reporter": "1.5.2",
+        "protractor": "5.4.3",
+        "ts-node": "8.6.2",
+        "tslint": "6.0.0",
+        "typescript": "3.7.5"
+    },
+    "license": "Apache-2.0",
+    "name": "frontend",
+    "private": true,
+    "scripts": {
+        "build": "ng build --output-path ../main/resources/static",
+        "build-prod": "ng build --prod --output-path ../main/resources/static",
+        "e2e": "ng e2e",
+        "lint": "ng lint",
+        "ng": "ng",
+        "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+        "start": "ng serve",
+        "test": "ng test"
+    },
+    "version": "0.0.0"
 }
