Change nginx confs

--- a/openvidu-server/docker/openvidu-docker-compose/openvidu-call.conf
+++ b/openvidu-server/docker/openvidu-docker-compose/openvidu-call.conf
@@ -17,10 +17,10 @@ server {
 
     ssl_prefer_server_ciphers on;
 
-    proxy_set_header Host \$host;
-    proxy_set_header X-Real-IP \$remote_addr;
-    proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto \$scheme;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Proto https;
     proxy_headers_hash_bucket_size 512;
     proxy_redirect off;
