--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.1'
 
 services:
+    openvidu-ce:
+        image: openvidu/openvidu-server
+        entrypoint: ["java", "-jar", "-Dserver.ssl.enabled=false", "-Dopenvidu.publicurl=https://${openvidu_public_ip}:4443", "-Dserver.port=5443", "/openvidu-server.jar"]
+        network_mode: host
+        environment:
+            - openvidu.secret=${openvidu_secret}
+            - kms.uris="[\"ws://${openvidu_public_ip}:8888/kurento\"]"
+
+    kms:
+        image: kurento/kurento-media-server
+        network_mode: host
+        environment:
+            - KMS_EXTERNAL_ADDRESS=${openvidu_public_ip}
+
     redis-db:
         image: redis
         network_mode: host
@@ -17,20 +31,6 @@ services:
             - MIN_PORT=40000
             - MAX_PORT=65535
         
-    kms:
-        image: kurento/kurento-media-server
-        network_mode: host
-        environment:
-            - KMS_EXTERNAL_ADDRESS=${openvidu_public_ip}
-
-    openvidu-ce:
-        image: openvidu/openvidu-server
-        entrypoint: ["java", "-jar", "-Dserver.ssl.enabled=false", "-Dopenvidu.publicurl=https://${openvidu_public_ip}:4443", "-Dserver.port=5443", "/openvidu-server.jar"]
-        network_mode: host
-        environment:
-            - openvidu.secret=${openvidu_secret}
-            - kms.uris="[\"ws://${openvidu_public_ip}:8888/kurento\"]"
-
     proxy:
         image: nginx
         network_mode: host
@@ -39,7 +39,7 @@ services:
             - ./openvidu-call.conf:/etc/nginx/conf.d/openvidu-call.conf
             - ./openvidu.cert:/etc/ssl/openvidu/openvidu.cert
             - ./openvidu.key:/etc/ssl/openvidu/openvidu.key
-        command: /bin/bash -c "rm /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+        command: /bin/bash -c "rm /etc/nginx/conf.d/default.conf | true && exec nginx -g 'daemon off;'"
 
     openvidu-call:
         image: openvidu-call
