Add openvidu-nginx image

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -1,2 +1,18 @@
 openvidu_public_ip=192.168.1.66
 openvidu_secret=MY_SECRET
+
+# Certificate type
+# You can choose:
+# 1. Self Signed (selfsigned) The certificate will be generate within
+#    the instance (default)
+# 2. Let's encrypt (letsencrypt) Free SSL certificate provider
+# 3. Your own certificate (owncert) If you own a SSL certificate, use this one.
+#    You need to provide your certificate files (nginx.key and nginx.crt) and
+#    put then in roles/nginx/files folder.
+whichcert=selfsigned
+
+# Your custom domain name i.e. openvidu.example.com
+domain_name=openvidu.example.com
+
+# Let's Encrypt email to receive notifications
+letsencrypt_email=openvidu@example.com
