--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -2,29 +2,36 @@ version: '3.1'
 
 services:
     openvidu-ce:
-        image: openvidu/openvidu-server
-        entrypoint: ["java", "-jar", "-Dserver.ssl.enabled=false", "-Dopenvidu.publicurl=https://${openvidu_public_ip}:4443", "-Dserver.port=5443", "/openvidu-server.jar"]
-        network_mode: host
+        image: openvidu/openvidu-server:2.12.0
+        entrypoint: ["java", "-jar", "-Dopenvidu.recording=true", "-Dopenvidu.recording.path=/opt/recordings", "-Dserver.ssl.enabled=false", "-Dopenvidu.publicurl=https://${openvidu_public_ip}:4443", "-Dserver.port=5443", "/openvidu-server.jar"]
+        ports:
+            - "5443:5443"
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - ov-recordings:/opt/recordings
         environment:
             - openvidu.secret=${openvidu_secret}
             - kms.uris="[\"ws://${openvidu_public_ip}:8888/kurento\"]"
+            - coturn.ip=${openvidu_public_ip}
+            - coturn.redis.ip=${openvidu_public_ip}
 
     kms:
-        image: kurento/kurento-media-server
+        image: kurento/kurento-media-server:6.13.0
         network_mode: host
         environment:
             - KMS_EXTERNAL_ADDRESS=${openvidu_public_ip}
 
     redis-db:
-        image: redis
-        network_mode: host
+        image: redis:5.0.7
+        ports:
+            - "6379:6379"
 
     openvidu-coturn:
         image: openvidu-coturn
         network_mode: host
         environment:
-            - REDIS_IP=${openvidu_public_ip}
-            - TURN_PUBLIC_IP=${openvidu_public_ip}
+            - REDIS_IP=localhost
+            - TURN_PUBLIC_IP=localhost
             - TURN_LISTEN_PORT=3478
             - DB_NAME=0
             - DB_PASSWORD=turn
@@ -32,18 +39,26 @@ services:
             - MAX_PORT=65535
         
     proxy:
-        image: nginx
+        image: openvidu-nginx
         network_mode: host
         volumes:
-            - ./kms.conf:/etc/nginx/conf.d/kms.conf
+            - ./default.conf:/etc/nginx/conf.d/default.conf
+            - ./openvidu.conf:/etc/nginx/conf.d/openvidu.conf
             - ./openvidu-call.conf:/etc/nginx/conf.d/openvidu-call.conf
-            - ./openvidu.cert:/etc/ssl/openvidu/openvidu.cert
-            - ./openvidu.key:/etc/ssl/openvidu/openvidu.key
-        command: /bin/bash -c "rm /etc/nginx/conf.d/default.conf | true && exec nginx -g 'daemon off;'"
 
     openvidu-call:
         image: openvidu-call
-        network_mode: host
+        ports:
+            - "5442:80"
         environment: 
             - OPENVIDU_URL=https://${openvidu_public_ip}:4443
             - OPENVIDU_SECRET=${openvidu_secret}
+
+volumes:
+    letsencrypt:
+    certbot:
+    ov-recordings:
+        driver_opts:
+              type: none
+              device: /opt/recordings # Recording host PATH
+              o: bind
