--- a/openvidu-server/docker/openvidu-docker-compose/openvidu.conf
+++ b/openvidu-server/docker/openvidu-docker-compose/openvidu.conf
@@ -1,21 +1,11 @@
 server {
-    listen 443 ssl;
+    listen 4443 ssl;
     server_name {domain_name};
 
     ssl on;
     ssl_certificate         /etc/letsencrypt/live/{domain_name}/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/{domain_name}/privkey.pem;
     ssl_trusted_certificate /etc/letsencrypt/live/{domain_name}/fullchain.pem;
-
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_timeout 5m;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
-
-    ssl_prefer_server_ciphers on;
 
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -25,7 +15,12 @@ server {
     proxy_headers_hash_bucket_size 512;
     proxy_redirect off;
 
+    # Websockets
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
     location / {
-        proxy_pass http://localhost:5442;
+            proxy_pass http://localhost:5443;
     }
 }
