Added letsencrypt and minor changes in compose

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -1,18 +1,28 @@
-openvidu_public_ip=192.168.1.66
-openvidu_secret=MY_SECRET
+# OpenVidu configuration
+# ----------------------
+# Documentation: https://openvidu.io/docs/reference-docs/openvidu-server-params/
 
-# Certificate type
-# You can choose:
-# 1. Self Signed (selfsigned) The certificate will be generate within
-#    the instance (default)
-# 2. Let's encrypt (letsencrypt) Free SSL certificate provider
-# 3. Your own certificate (owncert) If you own a SSL certificate, use this one.
-#    You need to provide your certificate files (nginx.key and nginx.crt) and
-#    put then in roles/nginx/files folder.
-whichcert=selfsigned
+# OpenVidu SECRET used for apps and to access to the inspector. Change it.
+OPENVIDU_SECRET=MY_SECRET
 
-# Your custom domain name i.e. openvidu.example.com
-domain_name=openvidu.example.com
+# Domain name. If you do not have one, the public IP of the machine.
+DOMAIN_OR_PUBLIC_IP=openvidu.example.com
 
-# Let's Encrypt email to receive notifications
-letsencrypt_email=openvidu@example.com
+# Openvidu Folder Record used for save the openvidu recording videos. Change it 
+with the folder you want to use from your host.
+OPENVIDU_RECORDING_FOLDER=/opt/recordings
+
+# Certificate type: 
+# - selfsigned:  Self signed certificate. Not recommended for production use.  
+#                Users will see an ERROR when connected to web page.
+# - owncert:     Valid certificate purchased in a Internet services company.
+#                Please put the certificates in same folder as docker-compose.yml
+#                file with names certificate.key and certificate.cert.
+# - letsencrypt: Generate a new certificate using letsencrypt. Please set the 
+#                required contact email for Let's Encrypt in LETSENCRYPT_EMAIL 
+#                variable.
+CERTIFICATE_TYPE=selfsigned
+
+# If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for 
+# notifications
+LETSENCRYPT_EMAIL=user@example.com
