--- a/openvidu-server/docker/openvidu-nginx/Dockerfile
+++ b/openvidu-server/docker/openvidu-nginx/Dockerfile
@@ -1,14 +1,18 @@
 FROM nginx:1.17.9
 
 # Install certbot
-RUN apt update && \
-    apt install -y python python-dev libffi6 libffi-dev libssl-dev curl build-essential procps && \
+RUN apt-get update && \
+    apt-get install -y python python-dev libffi6 libffi-dev libssl-dev curl build-essential procps && \
     curl -L 'https://bootstrap.pypa.io/get-pip.py' | python && \
     pip install -U cffi certbot && \
+    mkdir -p /var/www/certbot && \
     apt remove --purge -y python-dev build-essential libffi-dev libssl-dev curl && \
     apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+# Default nginx conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 # Entrypoint
 COPY ./entrypoint.sh /usr/local/bin
