--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -3,35 +3,42 @@ version: '3.1'
 services:
     openvidu-ce:
         image: openvidu/openvidu-server:2.12.0
-        entrypoint: ["java", "-jar", "-Dopenvidu.recording=true", "-Dopenvidu.recording.path=/opt/recordings", "-Dserver.ssl.enabled=false", "-Dopenvidu.publicurl=https://${openvidu_public_ip}:4443", "-Dserver.port=5443", "/openvidu-server.jar"]
-        ports:
-            - "5443:5443"
+        entrypoint: ["java", "-jar", "/openvidu-server.jar"]
+        restart: on-failure
+        network_mode: host
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - ov-recordings:/opt/recordings
+            - ${OPENVIDU_RECORDING_FOLDER}:${OPENVIDU_RECORDING_FOLDER}
         environment:
-            - openvidu.secret=${openvidu_secret}
-            - kms.uris="[\"ws://${openvidu_public_ip}:8888/kurento\"]"
-            - coturn.ip=${openvidu_public_ip}
-            - coturn.redis.ip=${openvidu_public_ip}
+            - SERVER_SSL_ENABLED=false
+            - SERVER_PORT=5443
+            - OPENVIDU_PUBLICURL=https://${DOMAIN_OR_PUBLIC_IP}:4443
+            - OPENVIDU_SECRET=${OPENVIDU_SECRET}
+            - OPENVIDU_RECORDING=true
+            - OPENVIDU_RECORDING_PATH=${OPENVIDU_RECORDING_FOLDER}
+            - KMS_URIS="[\"ws://127.0.0.1:8888/kurento\"]"
+            - COTURN_IP=127.0.0.1
+            - COTURN_REDIS_IP=127.0.0.1
 
     kms:
         image: kurento/kurento-media-server:6.13.0
+        restart: on-failure
         network_mode: host
         environment:
-            - KMS_EXTERNAL_ADDRESS=${openvidu_public_ip}
+            - KMS_EXTERNAL_ADDRESS=${DOMAIN_OR_PUBLIC_IP}
 
     redis-db:
         image: redis:5.0.7
-        ports:
-            - "6379:6379"
+        restart: on-failure
+        network_mode: host
 
     openvidu-coturn:
         image: openvidu-coturn
+        restart: on-failure
         network_mode: host
         environment:
-            - REDIS_IP=localhost
-            - TURN_PUBLIC_IP=localhost
+            - REDIS_IP=127.0.0.1
+            - TURN_PUBLIC_IP=127.0.0.1
             - TURN_LISTEN_PORT=3478
             - DB_NAME=0
             - DB_PASSWORD=turn
@@ -40,25 +47,22 @@ services:
         
     proxy:
         image: openvidu-nginx
+        restart: on-failure
         network_mode: host
         volumes:
-            - ./default.conf:/etc/nginx/conf.d/default.conf
-            - ./openvidu.conf:/etc/nginx/conf.d/openvidu.conf
-            - ./openvidu-call.conf:/etc/nginx/conf.d/openvidu-call.conf
+            - ./nginx_conf:/nginx_conf
+            - ./owncert:/owncert
+        environment: 
+            - DOMAIN_OR_PUBLIC_IP=${DOMAIN_OR_PUBLIC_IP}
+            - CERTIFICATE_TYPE=${CERTIFICATE_TYPE}
+            - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
 
     openvidu-call:
         image: openvidu-call
+        restart: on-failure
         ports:
             - "5442:80"
         environment: 
-            - OPENVIDU_URL=https://${openvidu_public_ip}:4443
-            - OPENVIDU_SECRET=${openvidu_secret}
+            - OPENVIDU_URL=https://${DOMAIN_OR_PUBLIC_IP}:4443
+            - OPENVIDU_SECRET=${OPENVIDU_SECRET}
 
-volumes:
-    letsencrypt:
-    certbot:
-    ov-recordings:
-        driver_opts:
-              type: none
-              device: /opt/recordings # Recording host PATH
-              o: bind
