--- a/openvidu-server/docker/openvidu-docker-compose/nginx_conf/openvidu-call.conf
+++ b/openvidu-server/docker/openvidu-docker-compose/nginx_conf/openvidu-call.conf
@@ -1,3 +1,15 @@
+add_header X-Frame-Options SAMEORIGIN;
+add_header X-Content-Type-Options nosniff;
+add_header X-XSS-Protection "1; mode=block";
+
+upstream openviducall {
+    server localhost:5442;
+}
+
+upstream openviduserver {
+    server localhost:5443;
+}
+
 server {
     listen 443 ssl;
     server_name {domain_name};
@@ -24,7 +36,26 @@ server {
     proxy_headers_hash_bucket_size 512;
     proxy_redirect off;
 
+    # WebSocket support
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
     location / {
-        proxy_pass http://localhost:5442;
+        proxy_pass http://openviducall;
+    }
+
+    location /api/ {
+        proxy_pass http://openviduserver$request_uri;
+    }
+
+    location /dashboard {
+        proxy_bind $server_addr;
+        rewrite ^/dashboard/(.*)$ /$1 break;
+        proxy_pass http://openviduserver;
+    }    
+
+    location /openvidu {
+        proxy_pass http://openviduserver;
     }
 }
