--- a/openvidu-server/docker/openvidu-docker-compose/nginx_conf/openvidu-call.conf
+++ b/openvidu-server/docker/openvidu-docker-compose/nginx_conf/openvidu-call.conf
@@ -1,7 +1,3 @@
-add_header X-Frame-Options SAMEORIGIN;
-add_header X-Content-Type-Options nosniff;
-add_header X-XSS-Protection "1; mode=block";
-
 upstream openviducall {
     server localhost:5442;
 }
@@ -36,26 +32,35 @@ server {
     proxy_headers_hash_bucket_size 512;
     proxy_redirect off;
 
-    # WebSocket support
+    # Websockets
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
 
+    # Openvidu Call
     location / {
         proxy_pass http://openviducall;
     }
 
-    location /api/ {
-        proxy_pass http://openviduserver$request_uri;
-    }
-
-    location /dashboard {
-        proxy_bind $server_addr;
-        rewrite ^/dashboard/(.*)$ /$1 break;
+    # Openvidu Server
+    location /api {
         proxy_pass http://openviduserver;
-    }    
+    }
 
     location /openvidu {
         proxy_pass http://openviduserver;
+    }
+
+    location /info {
+        proxy_pass http://openviduserver;
+    }
+
+    location /config {
+        proxy_pass http://openviduserver;
+    }
+
+    location /dashboard {
+        rewrite ^/dashboard/(.*)$ /$1 break;
+        proxy_pass http://openviduserver/;
     }
 }
