--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -9,7 +9,7 @@ OPENVIDU_SECRET=MY_SECRET
 DOMAIN_OR_PUBLIC_IP=openvidu.example.com
 
 # Openvidu Folder Record used for save the openvidu recording videos. Change it 
-with the folder you want to use from your host.
+# with the folder you want to use from your host.
 OPENVIDU_RECORDING_FOLDER=/opt/recordings
 
 # Certificate type: 
