--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -25,7 +25,7 @@ services:
         restart: on-failure
         network_mode: host
         environment:
-            - KMS_EXTERNAL_ADDRESS=${DOMAIN_OR_PUBLIC_IP}
+            - KMS_EXTERNAL_ADDRESS=auto
 
     redis-db:
         image: redis:5.0.7
