Change Dashboard URL

--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -42,7 +42,7 @@
     "name": "frontend",
     "private": true,
     "scripts": {
-        "build": "ng build --output-path ../main/resources/static",
+        "build": "ng build --base-href /dashboard/ --deploy-url /dashboard --output-path ../main/resources/static",
         "build-prod": "ng build --prod --output-path ../main/resources/static",
         "e2e": "ng e2e",
         "lint": "ng lint",
