Changes in documentation

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -6,7 +6,7 @@
 OPENVIDU_SECRET=MY_SECRET
 
 # Domain name. If you do not have one, the public IP of the machine.
-DOMAIN_OR_PUBLIC_IP=openvidu.example.com
+DOMAIN_OR_PUBLIC_IP=192.168.1.66
 
 # Openvidu Folder Record used for save the openvidu recording videos. Change it 
 # with the folder you want to use from your host.
@@ -26,3 +26,9 @@ CERTIFICATE_TYPE=selfsigned
 # If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for 
 # notifications
 LETSENCRYPT_EMAIL=user@example.com
+
+# Kurento Media Server image
+# --------------------------
+# Docker hub kurento media server: https://hub.docker.com/r/kurento/kurento-media-server-dev
+# Uncomment the next line and write the KMS image that you want use
+# KMS_IMAGE=kurento-media-server-dev:6.13
