--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -6,7 +6,7 @@
 OPENVIDU_SECRET=MY_SECRET
 
 # Domain name. If you do not have one, the public IP of the machine.
-DOMAIN_OR_PUBLIC_IP=192.168.1.66
+DOMAIN_OR_PUBLIC_IP=openvidu.example.com
 
 # Openvidu Folder Record used for save the openvidu recording videos. Change it 
 # with the folder you want to use from your host.
@@ -30,5 +30,19 @@ LETSENCRYPT_EMAIL=user@example.com
 # Kurento Media Server image
 # --------------------------
 # Docker hub kurento media server: https://hub.docker.com/r/kurento/kurento-media-server-dev
-# Uncomment the next line and write the KMS image that you want use
+# Uncomment the next line and define this variable with KMS image that you want use
 # KMS_IMAGE=kurento-media-server-dev:6.13
+
+# Kurento Media Server Level logs
+# -------------------------------
+# Uncomment the next line and define this variable to change 
+# the verbosity level of the logs of KMS
+# Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
+# KMS_DEBUG_LEVEL=3,Kurento*:4,kms*:4,sdp*:4,webrtc*:4,*rtpendpoint:4,rtp*handler:4,rtpsynchronizer:4,agnosticbin:4
+
+# Openvidu Server Level logs
+# --------------------------
+# Uncomment the next line and define this variable to change
+# the verbosity level of the logs of Openvidu Service
+# RECOMENDED VALUES: INFO for normal logs DEBUG for more verbose logs
+# OV_CE_DEBUG_LEVEL=INFO 
