--- a/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -126,6 +126,18 @@
 			"defaultValue": 300
 		},
 		{
+			"name": "openvidu.sessions.garbage.interval",
+			"type": "java.lang.Integer",
+			"description": "How often the garbage collector of non active sessions runs. This helps cleaning up sessions that have been initialized through REST API (and maybe tokens have been created for them) but have had no users connected. Default to 900s (15 mins). 0 to disable non active sessions garbage collector",
+			"defaultValue": 900
+		},
+		{
+			"name": "openvidu.sessions.garbage.threshold",
+			"type": "java.lang.Integer",
+			"description": "Minimum time in seconds that a non active session must have been in existence for the garbage collector of non active sessions to remove it. Default to 3600s (1 hour). If non active sessions garbage collector is disabled (property 'openvidu.sessions.garbage.interval' to 0) this property is ignored",
+			"defaultValue": 3600
+		},
+		{
 			"name": "coturn.ip",
 			"type": "java.lang.String",
 			"description": "Coturn IP of a deployed coturn server"
