--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -2,11 +2,11 @@
 # ----------------------
 # Documentation: https://openvidu.io/docs/reference-docs/openvidu-server-params/
 
-# OpenVidu SECRET used for apps and to access to the inspector. Change it.
-OPENVIDU_SECRET=MY_SECRET
+# OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
+OPENVIDU_SECRET=
 
-# Domain name. If you do not have one, the public IP of the machine.
-DOMAIN_OR_PUBLIC_IP=openvidu.example.com
+# Domain name. If you do not have one, the public IP of the machine. For example 212.4.34.1 or openvidu.example.com. 
+OPENVIDU_DOMAIN_OR_PUBLIC_IP=
 
 # Openvidu Folder Record used for save the openvidu recording videos. Change it 
 # with the folder you want to use from your host.
