--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     # This file not necessary change, you only need change 
     # the .env file with the necessaries variables.
     openvidu-server:
-        image: openvidu/openvidu-server:2.13.0-beta1
+        image: openvidu/openvidu-server:2.13.0-beta2
         restart: on-failure
         network_mode: host
         volumes:
@@ -29,6 +29,7 @@ services:
         image: kurento/${KMS_IMAGE:-kurento-media-server-dev:6.13}
         restart: on-failure
         network_mode: host
+        ulimits: -1
         environment:
             - KMS_EXTERNAL_ADDRESS=auto
             - KMS_MIN_PORT=40000
